--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ p.danger {
 }
 /************ Navbar Css ************/
 nav.navbar {
-  padding: 12px 238px 0 238px;
+  padding: 14px 238px 0 238px;
   position: fixed;
   width: 100%;
   top: 0;
@@ -80,7 +80,7 @@ nav.navbar {
   transition:  0.32s ease-in-out;
 }
 nav.navbar.scrolled {
-  padding: 0px 0;
+  padding: 6px 0;
   margin: 0;
   backdrop-filter: blur(12px);
   border-bottom: solid 1px #AAAAAA;
@@ -372,6 +372,7 @@ img {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin: 40px 0px 40px 0px;
 }
 
 .Project-sidebar {
