--- a/src/Project1/Project1.css
+++ b/src/Project1/Project1.css
@@ -514,20 +514,13 @@
   display: flex;
 }
 
-.footer-h2 {
-  color: #3C8CDD;
-  font-size: medium;
-  font-weight: bold;
-  margin-right: 80px;
-}
-
 .footer-header {
   color: #263340;
   font-size: 24px;
   font-weight: 300;
   line-height: 32px;
   margin-right: 100px;
-  margin-top: 20px;
+  margin-top: 28px;
 }
 
 .winnerpage {
@@ -542,6 +535,7 @@
   letter-spacing: 0.8px;
   display: flex;
   align-items: center;
+  text-decoration: none;
 }
 
 .winnerpage:hover {
