--- a/src/Project2/Project2.css
+++ b/src/Project2/Project2.css
@@ -41,8 +41,6 @@
 }
 
 
-
-
 /*Overview.css */
 #overview2 {
   background-color: #FAFCFE;
@@ -109,8 +107,13 @@
   line-height: 1.6;
 }
 
-.Designprogress {
-  margin-bottom: 150px;
+.Overview-header {
+  color: #454545;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 36px;
+  text-align: center;
+  margin-bottom: 80px;
 }
 
 /* IntroSection.css */
