--- a/src/Project3/Project3.css
+++ b/src/Project3/Project3.css
@@ -79,7 +79,7 @@
     padding: 20px;
   }
   
-  .Project1-sidebar h1 {
+  .Project3-sidebar h1 {
     margin: 10px;
     margin-bottom: 40px;
   }
@@ -215,18 +215,7 @@
   margin-top: 10px;
 }
 
-.background3-image-area {
-  border: 1px solid #ccc;
-  height: 200px;
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #999;
-  font-size: 16px;
-}
-
-.takeoutwaste {
+.fooddeliverywaste {
   margin-bottom: 80px;
   border-radius: 12px;
 }
@@ -503,4 +492,5 @@
 .scene {
   border-radius: 12px;
   margin-bottom: 40px;
+  width: 95%;
 }
