--- a/src/App.css
+++ b/src/App.css
@@ -498,7 +498,7 @@ img {
   align-items: center; /* Vertically aligned */
   justify-content: space-between;
   margin: 25px;
-  width: 18%;
+  width: 20%;
   text-align: left;
   padding: 12px 16px;
   letter-spacing: 0.05em;
@@ -530,14 +530,19 @@ img {
   font-size: 18px;
 }
 
+.row {
+  padding: 25px;
+  display: flex;
+}
+
 .card-container {
-  width: 30%;
   border: 1px solid #dadada;
   background-color: white;
-  margin: 25px;
-  padding: 16px;
+  margin: 15px;
+  padding: 16px !important;
   border-radius: 8px;
   max-width: 600px;
+  flex: 0.32
 }
 
 .image-container {
