--- a/src/App.css
+++ b/src/App.css
@@ -221,34 +221,65 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 	border-color: transparent;
 }
-#dropdown-basic {
-  background: none;
+
+/* Nav Links 样式 */
+.navbar-link {
+  color: #707070 !important;
+  padding: 12px 20px !important;
+  text-decoration: none !important;
+  border-radius: 8px !important;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out !important;
+}
+.navbar-link:hover, .navbar-link.active {
+  color: #454545 !important;
+}
+
+/* 针对 Dropdown.Toggle 的样式，使其和其他 Nav.Link 保持一致 */
+.dropdown-toggle {
+  color: #707070 !important;
+  padding: 10px 20px !important;
+  text-decoration: none !important;
+  border-radius: 8px !important;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out !important;
+  background-color: transparent !important;
 }
 .dropdown-toggle::after {
-  display: none !important; /* 隐藏默认的倒三角 */
+  display: none !important; /* 隐藏小三角形 */
 }
-.dropdown-menu {
-  --bs-dropdown-min-width: 4rem !important; /* 覆盖 Bootstrap 默认的最小宽度变量 */
+.dropdown-toggle:focus,
+.dropdown-toggle:active {
+  background-color: transparent !important;
+}
+.dropdown-toggle:hover {
   background-color: rgba(255, 255, 255, 0.4) !important;
-  border: 1px solid #AAAAAA !important;
+}
+
+/* Dropdown Menu 样式，带有模糊效果 */
+.dropdown-menu {
+  --bs-dropdown-min-width: 4rem !important;
+  background-color: rgba(255, 255, 255, 0.4) !important;
+  backdrop-filter: blur(10px) !important;
   border-radius: 12px !important;
-  backdrop-filter: blur(50px) !important;
+  border: 1px solid #AAAAAA !important;
   transition: opacity 0.3s ease-in-out !important;
-  margin-top: 10px !important;
-  margin-left: 4px !important;
+  margin-top: 6px !important;
   padding: 4px !important;
 }
 
+/* Dropdown Item 样式 */
 .dropdown-item {
   color: #707070 !important;
-  padding: 10px 20px !important;
+  padding: 10px 18px !important;
   text-align: center !important;
   border-radius: 8px !important;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out !important;
 }
-
 .dropdown-item:hover {
   background-color: rgba(255, 255, 255) !important;
+  color: #454545 !important;
+  cursor: pointer;
 }
+
 
 
 
