--- a/src/Project3/Project3.css
+++ b/src/Project3/Project3.css
@@ -425,12 +425,19 @@
   display: flex;
   gap: 10px;
   justify-content: center;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
 }
 
 .RealWorldData {
   width: 49%;
   height: auto;
+}
+
+.codecontainer {
+  max-height: 400px;
+  font-size: 0.8em;
+  overflow: auto;
+  margin-bottom: 60px;
 }
 
 /* FinalDesign.css */
