--- a/src/Project3/Project3.css
+++ b/src/Project3/Project3.css
@@ -440,6 +440,11 @@
   margin-bottom: 60px;
 }
 
+pre {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
+
 /* FinalDesign.css */
 #final3 {
   letter-spacing: 0.05em;
