--- a/src/App.css
+++ b/src/App.css
@@ -609,39 +609,44 @@ img {
 }
 
 .card-container {
-  border: 1px solid #dadada;
-  background-color: white;
-  margin: 15px;
   padding: 16px !important;
   border-radius: 8px;
-  max-width: 600px;
-  flex: 0.32
+  width: 50%;
+  flex: 0.5;
+  display: flex;
+  align-items: center;
 }
 
 .image-container {
-  text-align: center;
-  margin-bottom: 24px;
+  width: 18%;
+  align-items: center;
 }
 
 .project-image {
   width: 100%;
   height: auto;
-  border-radius: 8px;
 }
 
 .project-info {
   text-align: left;
+  margin: 12px;
 }
 
 .project-title {
   font-size: 18px;
-  margin-bottom: 12px;
+  margin: 4px;
   color: #454545;
+}
+
+.linktoOthers {
+  color: #454545;
+  text-decoration: none;
 }
 
 .project-subtitle {
   font-size: 14px;
-  margin-bottom: 12px;
+  margin: 4px;
+  line-height: 1.5em;
   color: #888;
 }
 
