--- a/src/Project3/Project3.css
+++ b/src/Project3/Project3.css
@@ -506,3 +506,27 @@ pre {
   margin-bottom: 40px;
   width: 95%;
 }
+
+/* FooterSection.css */
+#footer3 {
+  letter-spacing: 0.1em;
+  background: linear-gradient(#ffffff, #d1e1fa);
+  padding: 60px 0px 60px 0px;
+}
+
+.footer3-container {
+  color: #3C8CDD;
+  padding: 20px;
+  margin-left: 25%;
+  margin-right: 20%;
+  display: flex;
+}
+
+.footer3-header {
+  color: #263340;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 32px;
+  margin-right: 100px;
+  margin-top: 28px;
+}
