--- a/src/App.css
+++ b/src/App.css
@@ -262,13 +262,16 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /* Dropdown Menu 样式，带有模糊效果 */
 .dropdown-menu {
   --bs-dropdown-min-width: 4rem !important;
-  background-color: rgba(255, 255, 255, 0.4) !important;
-  backdrop-filter: blur(10px) !important;
-  border-radius: 12px !important;
-  border: 1px solid #AAAAAA !important;
+  background-color: rgba(255, 255, 255, 0.3) !important;
+  border-radius: 8px !important;
+  border: none !important;
   transition: opacity 0.3s ease-in-out !important;
-  margin-top: 6px !important;
+  margin-top: 4px !important;
   padding: 4px !important;
+}
+
+.scrolled-border {
+  border: 1px solid #AAAAAA !important;
 }
 
 /* Dropdown Item 样式 */
@@ -276,7 +279,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   color: #707070 !important;
   padding: 10px 18px !important;
   text-align: center !important;
-  border-radius: 8px !important;
+  border-radius: 6px !important;
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out !important;
 }
 .dropdown-item:hover {
